# studypy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
